# RoyaleLog-worker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: health.py  predict.py  train.py
app/core/: config.py  database.py  errors.py  exception_handler.py  middleware.py
app/ml/: feature_builder.py  lgbm_predictor.py  model_store.py  predictor.py  trainer.py
app/schemas/: predict.py  train.py
docs/superpowers/plans/: 2026-04-01-royalelog-worker.md
docs/superpowers/specs/: 2026-04-01-royalelog-worker-design.md
tests/: conftest.py  test_api_health.py  test_api_predict.py  test_api_train.py  test_config.py  test_feature_builder.py  test_model_store.py  test_predictor.py  test_trainer.py
